# wildb

./: README.md  pyproject.toml
wildberries_project/: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  manage.py
wildberries_project/products/: models.py  serializers.py  tasks.py  urls.py  views.py
wildberries_project/products/migrations/: 0001_initial.py
wildberries_project/wildberries_project/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
